Switch to Relude

--- a/package.yaml
+++ b/package.yaml
@@ -15,9 +15,6 @@ ghc-prof-options:
   - -auto-all
   - -caf-all
 
-extra-source-files:
-  - ./test/data/**/*
-
 dependencies:
   - base
   - idris
@@ -27,6 +24,7 @@ dependencies:
   - haskeline >= 0.7
   - mtl
   - transformers
+  - relude
   - Win32
 
 executables:
@@ -34,3 +32,44 @@ executables:
     main: Main.hs
     source-dirs:
       - src
+
+default-extensions:
+  - AutoDeriveTypeable
+  - BangPatterns
+  - BinaryLiterals
+  - ConstraintKinds
+  - DataKinds
+  - DefaultSignatures
+  - DeriveDataTypeable
+  - DeriveFoldable
+  - DeriveFunctor
+  - DeriveGeneric
+  - DeriveTraversable
+  - DoAndIfThenElse
+  - EmptyDataDecls
+  - ExistentialQuantification
+  - FlexibleContexts
+  - FlexibleInstances
+  - FunctionalDependencies
+  - GADTs
+  - GeneralizedNewtypeDeriving
+  - InstanceSigs
+  - KindSignatures
+  - LambdaCase
+  - MonadFailDesugaring
+  - MultiParamTypeClasses
+  - MultiWayIf
+  - NamedFieldPuns
+  - NoImplicitPrelude
+  - OverloadedStrings
+  - PartialTypeSignatures
+  - PatternGuards
+  - PolyKinds
+  - RankNTypes
+  - RecordWildCards
+  - ScopedTypeVariables
+  - StandaloneDeriving
+  - TupleSections
+  - TypeFamilies
+  - TypeSynonymInstances
+  - ViewPatterns
