--- a/stack.yaml
+++ b/stack.yaml
@@ -29,7 +29,7 @@ resolver: lts-12.26
 #   - auto-update
 #   - wai
 packages:
-- .
+  - .
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
@@ -39,8 +39,8 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
-
+extra-deps:
+  - zenc-0.1.1
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
