--- a/package.yaml
+++ b/package.yaml
@@ -32,7 +32,7 @@ library:
   source-dirs:
     - codegen/src
   exposed-modules:
-    - IRTS.Codegenautohotkey
+    - IRTS.CodegenAutoHotkey
 
 executables:
   idris-codegen-autohotkey:
