--- a/package.yaml
+++ b/package.yaml
@@ -35,7 +35,7 @@ library:
   source-dirs:
     - codegen/src
   exposed-modules:
-    - IRTS.CodegenAutoHotkey
+    - IdrisCG.AutoHotkey
 
 executables:
   idris-codegen-autohotkey:
