Clean up a little bit

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,5 +3,6 @@ current_version = 0.0.1
 commit = True
 tag = True
 
-[bumpversion:file:autohotkey.ipkg]
+[bumpversion:file:elba.toml]
+[bumpversion:file:lib/Drahko.idr]
 [bumpversion:file:package.yaml]
