--- a/elba.toml
+++ b/elba.toml
@@ -1,7 +1,12 @@
 [package]
 name = "drahko/drahko"
 version = "0.0.0"
-authors = []
+authors = [
+  "Nikita Tchayka <nick@booster.cloud>"
+]
+description = "A modern Windows automation suite"
+homepage = "https://drahko.github.io"
+repository = "https://github.com/drahko/drahko"
 
 [dependencies]
 
