--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,8 @@
 [bumpversion]
-current_version = 0.0.1
+current_version = 0.0.0
 commit = True
 tag = True
 
-[bumpversion:file:autohotkey.ipkg]
+[bumpversion:file:elba.toml]
+[bumpversion:file:lib/Drahko.idr]
 [bumpversion:file:package.yaml]
